@@ -1,3 +1,8 @@
+1999-09-24  Jennifer Hom  <jenn@scriptics.com>
+
+	* library/tcltest1.0/tcltest.tcl: Changed checks for value of
+	tcl_interactive to checks for existence of tcl_interactive.
+
 1999-09-24  Jeff Hobbs  <hobbs@scriptics.com>
 
 	* mac/tclMacFCmd.c: fixed filename stuff to support UTF-8 [Bug: 2869]
